--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0"
   },
