--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.525.0",
     "prop-types": "^15.8.1",
